@@ -13,6 +13,7 @@ require "deep_test/extensions/object_extension"
 
 require "deep_test/tuple_space_factory"
 require "deep_test/rinda_blackboard"
+require "deep_test/loader"
 require "deep_test/server"
 require "deep_test/simple_test_blackboard"
 require "deep_test/supervised_test_suite"
