@@ -5,11 +5,8 @@ module DeepTest
       self
     end
     
-    def self.run(args)
+    def self.run
       require "deep_test"
-      ENV["RAILS_ENV"] = "test"
-      Object.const_set "RAILS_ENV", "test"
-      Dir.glob(ARGV.first).each { |file| load file }
       suite = Test::Unit::AutoRunner::COLLECTORS[:objectspace].call NO_FILTERS
       blackboard = DeepTest::RindaBlackboard.new
       supervisor = DeepTest::Supervisor.new blackboard
@@ -20,8 +17,4 @@ module DeepTest
       return result.passed?
     end 
   end
-end
-
-if __FILE__ == $0
-  exit DeepTest::Loader.run(ARGV)
 end
