@@ -1,3 +1,7 @@
+* SVN
+
+* No longer fork from Rake process.
+
 * 1.1.0
 
 * DeepTest::TestTask#processes= is now DeepTest::TestTask#number_of_workers=
